# sp-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
distribution/: README.md  build-macos-x64.sh
distribution/macos/: distribution.xml  postinstall  preinstall  sarocu.superplus.plist
distribution/macos/resources/: conclusion.html  license.html  uninstall.sh  welcome.html
distribution/macos/scripts/: postinstall
sp/: Cargo.toml
sp/src/: main.rs  project.rs
sp/src/boilerplate/: bar_charts.py  index.py  mlpr.py  pca.py  requirements.txt  simple_line.py  simple_linear.py  svr.py  var.py
sp/src/boilerplate/api/: .sample.env  Dockerfile  app.py  decorators.py  docker-compose.yml  requirements.txt  supervisord.conf
sp/src/boilerplate/api/queue/: celery.py  default_queue.py  docker-compose.yml  supervisord.conf  tasks.py
sp/src/cli/: api.rs  charts.rs  data.rs  mod.rs  models.rs  package.rs  run.rs  version.rs
