[package]
name = "sp"
version = "0.1.0"
authors = ["Sam <sam@sarocu.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
clap-nested = "0.3.1"
dialoguer = "0.5.0"
colored = "1.9.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
csv = "1.1.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3